--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,15 @@ repositories {
 }
 
 dependencies {
+    // MapDB
     compile 'org.mapdb:mapdb:3.0.0-M4'
+
+    // Apache Common Lang
     compile 'commons-lang:commons-lang:2.6'
+
+    // EHCACHE
+//    compile 'net.sf.ehcache:ehcache:2.10.1'
+    compile 'org.ehcache:ehcache:3.0.0.rc2'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
